# ros2-basestation

./: .gitignore  package.xml  setup.py
basestation/: basestation_gui.py  console.py  console_node.py  gui_flow.drawio  pico_shim.py
launch/: launch_basestation.xml
